# cryptomator-vault-server

./: .gitignore  DEVELOPER.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: adapters.py  config.py  main.py  process.py  rate_limit.py  session.py  utils.py
app/templates/: browser.html  layout.html  login.html
app/templates/partials/: destination_picker.html  file_list.html  status.html  upload_result.html
